--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
-    <link rel="shortcut icon" href="images/" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Instagram Clone</title>
 </head>
 
@@ -19,7 +19,7 @@
         <div class="right flex flex-col  p-12 w-6/12">
             <div class="right_1 flex flex-col  bg-white mb-6 pt-10 px-12  border-gray-200 border-2 ">
                 <div class="img flex justify-center pb-5">
-                    <img src="images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
+                    <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
                 </div>
                 <input class=" bg-gray-100 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
                     placeholder="Phone number, username or email">
@@ -29,7 +29,7 @@
                 <span class="flex items-center justify-center m-4">OR</span>
                 <div class="fbbtn flex items-center justify-center">
 
-                    <img src="images/fb-logo.png" class="h-6" alt="">
+                    <img src="/images/fb-logo.png" class="h-6" alt="">
                     <button class="text-blue-800 font-semisemibold">Log in with facebook</button>
                 </div>
 
@@ -41,8 +41,8 @@
             <div class="lastend">
                 <span class="flex items-center justify-center m-4 text-gray-800">Get the app</span>
                 <div class="down flex items-center justify-center">
-                    <img src="images/appstore.png" class="w-36" alt="">
-                    <img src="images/googlestore.png" class="w-36" alt="">
+                    <img src="/images/appstore.png" class="w-36" alt="">
+                    <img src="/images/googlestore.png" class="w-36" alt="">
                 </div>
             </div>
         </div>
