--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Instagram Clone</title>
 </head>
 
-<body class="bg-gray-100 m-0 p-0 font-popins text-xs">
+<body class="bg-gray-100 m-0 p-0 font-popins text-xs box-border">
     <div class="container flex mx-auto items-center justify-center">
-        <div class="left ">
+        <div class="left sm-mx:hidden">
             <img src="/images/left_photo.png" class="  border-8 border-solid border-black rounded-3xl border-gray-800 " alt="phone">
 
         </div>
