--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input class=" bg-gray-100 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
                     placeholder="Phone number, username or email">
                 <input class=" bg-gray-100 p-2 border-gray-200 border-2 m-1" type="password" placeholder="Password">
-                <button class=" rounded-md bg-red-500 text-white py-2 mt-3 ">Log In</button>
+                <button class=" rounded-md bg-blue-500 text-white py-2 mt-3 ">Log In</button>
                 <hr>
                 <span class="flex items-center justify-center m-4">OR</span>
                 <div class="fbbtn flex items-center justify-center">
