--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <img src="/images/left_photo.png" class="  border-8 border-solid border-black rounded-3xl border-gray-800 " alt="phone">
 
         </div>
-        <div class="right flex flex-col  p-12 w-6/12">
-            <div class="right_1 flex flex-col  bg-white mb-6 pt-10 px-12  border-gray-200 border-2 ">
+        <div class="right flex flex-col  p-12 w-[500px] sm-mx:justify-center sm-mx:items-center">
+            <div class="right_1 flex flex-col  bg-white mb-6 pt-10 px-12 sm-mx:w-80  border-gray-200 border-2 ">
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
                 </div>
@@ -35,7 +35,7 @@
 
                 <span class="flex justify-center m-5 cursor-pointer text-blue-900 text-xs ">Fogot password?</span>
             </div>
-            <div class="right_2 flex bg-white p-4 border-gray-200 border-2 justify-center">
+            <div class="right_2 flex sm-mx:w-80 bg-white p-4 border-gray-200 border-2 justify-center">
                 <button>Don't have an account?<span class="text-sky-600 font-medium">Sign up?</span></button>
             </div>
             <div class="lastend">
