--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/images/left_photo.png" class="  border-8 border-solid border-black rounded-3xl border-gray-800 " alt="phone">
 
         </div>
-        <div class="right flex flex-col  p-12 w-[500px] sm-mx:justify-center sm-mx:items-center">
+        <div class="right flex flex-col sm-mx:mt-0  p-12 w-[500px] sm-mx:justify-center sm-mx:items-center">
             <div class="right_1 flex flex-col  bg-white mb-6 pt-10 px-12 sm-mx:w-80  border-gray-200 border-2 ">
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
