--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
     <link rel="stylesheet" href="/index.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Instagram Clone</title>
 </head>
 
-<body class="bg-gray-100 m-0 p-0 font-popins text-xs box-border sm-mx:overflow-x-hidden">
+<body class="bg-gray-100 relative m-0 p-0 font-popins text-xs box-border sm-mx:overflow-x-hidden">
     <div class="container flex mx-auto items-center justify-center">
         <div class="left sm-mx:hidden">
             <img src="/images/left_photo.png" class="  border-8 border-solid border-black rounded-3xl border-gray-800 " alt="phone">
 
         </div>
-        <div class="right flex flex-col sm-mx:mt-0  p-12 w-[500px] sm-mx:justify-center sm-mx:items-center">
+        <div class="right  flex flex-col sm-mx:mt-0  p-12 w-[500px] sm-mx:justify-center sm-mx:items-center">
             <div class="right_1 flex flex-col  bg-white mb-6 pt-10 px-12 sm-mx:px-4  sm-mx:w-80  border-gray-200 border-2 ">
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
