--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
                 </div>
-                <input class=" bg-gray-100 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
+                <input class=" bg-gray-100 focus:outline-gray-400 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
                     placeholder="Phone number, username or email">
-                <input class=" bg-gray-100 p-2 border-gray-200 border-2 m-1" type="password" placeholder="Password">
-                <button class=" rounded-md bg-blue-500 text-white py-2 mt-3 ">Log In</button>
+                <input class=" bg-gray-100 p-2 focus:outline-gray-400 border-gray-200 border-2 m-1" type="password" placeholder="Password">
+                <button class=" rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-700 text-white py-2 mt-3 ">Log In</button>
                 <hr>
                 <span class="flex items-center justify-center m-4">OR</span>
                 <div class="fbbtn flex items-center justify-center">
 
                     <img src="/images/fb-logo.png" class="h-6" alt="">
-                    <button class="text-blue-800 font-semisemibold">Log in with facebook</button>
+                    <a href="https://www.facebook.com/"><button class="text-blue-800 hover:text-blue-600 active:text-blue-700 font-semisemibold">Log in with facebook</button></a>
                 </div>
 
-                <span class="flex justify-center m-5 cursor-pointer text-blue-900 text-xs ">Fogot password?</span>
+                <a href="https://www.instagram.com/accounts/password/reset/"><span class="flex justify-center m-5 cursor-pointer hover:text-blue-600 active:text-blue-700 text-blue-900 text-xs ">Fogot password?</span></a>
             </div>
             <div class="right_2 flex sm-mx:w-80 bg-white p-4 border-gray-200 border-2 justify-center">
-                <button>Don't have an account?<span class="text-sky-600 font-medium">Sign up?</span></button>
+                <button>Don't have an account? <a href="https://www.instagram.com/accounts/emailsignup/"> <span class="text-sky-600 hover:text-sky-700 active:text-blue-600 font-medium">Sign up?</span></a></button>
             </div>
             <div class="lastend">
                 <span class="flex items-center justify-center m-4 text-gray-800">Get the app</span>
                 <div class="down flex items-center justify-center">
-                    <img src="/images/appstore.png" class="w-36" alt="">
-                    <img src="/images/googlestore.png" class="w-36" alt="">
+                    <a href="https://apps.apple.com/in/app/instagram/id389801252" target="_blank"><img src="/images/appstore.png"  class="w-36 cursor-pointer" alt="appstore "></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_IN&gl=US"   target="_blank"> <img src="/images/googlestore.png"  class="w-36 cursor-pointer" alt="google playstore"></a>
                 </div>
             </div>
         </div>
