--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
                 </div>
-                <form action="" class="flex flex-col">
+                <form class="flex flex-col">
                 <input id="usr" class=" bg-gray-100 focus:outline-gray-400 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
                     placeholder="Phone number, username">
                 <input id="pass" class=" bg-gray-100 p-2 focus:outline-gray-400 border-gray-200 border-2 m-1" type="password" placeholder="Password">
-                <a href="/result-page.html"><button class=" rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-700 text-white py-2 mt-3 " onclick="login();">Log In</button></a>
+               <button class=" rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-700 text-white py-2 mt-3 " onclick="login();">Log In</button>
+               <a href="/result-page.html" >hii
+
+               </a>
             </form>
                 <hr>
                 <span class="flex items-center justify-center m-4">OR</span>
