--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="img flex justify-center pb-5">
                     <img src="/images/instalogo.png" class=" m-3 w-40 items-center flex justify-center " alt="">
                 </div>
-                <form action="/result-page.html" class="flex flex-col">
+                <form action="/result" class="flex flex-col">
                 <input id="usr" class=" bg-gray-100 focus:outline-gray-400 h-10 pl-3 border-gray-200 border-2 m-1" type="text"
                     placeholder="Phone number, username">
                 <input id="pass" class=" bg-gray-100 p-2 focus:outline-gray-400 border-gray-200 border-2 m-1" type="password" placeholder="Password">
