--- a/result-page.html
+++ b/result-page.html
@@ -18,6 +18,7 @@
     <lottie-player class="flex justify-center" src="https://assets4.lottiefiles.com/packages/lf20_RfD6Lb.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
             <h1 class="text-4xl capitalize flex justify-center items-center">scam ho gaya apke sath toh hehe </h1>
 </div>
+    <a href="/">back to home</a>
    
 
     <script src="/index.js"></script>
